WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
145217
ThreadableLoaderOptions::isolatedCopy() doesn't produce a copy that is safe for sending to another thread
https://bugs.webkit.org/show_bug.cgi?id=145217
Summary
ThreadableLoaderOptions::isolatedCopy() doesn't produce a copy that is safe f...
Alexey Proskuryakov
Reported
2015-05-20 11:46:52 PDT
ThreadableLoaderOptions contains an AtomicString, so even an isolated copy cannot be sent to another thread.
Attachments
proposed fix
(2.11 KB, patch)
2015-05-20 11:50 PDT
,
Alexey Proskuryakov
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Alexey Proskuryakov
Comment 1
2015-05-20 11:50:40 PDT
Created
attachment 253453
[details]
proposed fix
Anders Carlsson
Comment 2
2015-05-20 12:14:38 PDT
Comment on
attachment 253453
[details]
proposed fix View in context:
https://bugs.webkit.org/attachment.cgi?id=253453&action=review
> Source/WebCore/loader/ThreadableLoader.h:71 > + String initiator; // This cannot be an AtomicString, as isolatedCopy() wouldn't create an object that's safe for passing to another thread.
I think this comment would be better as a ChangeLog comment - no real point in listing what types a member variable cannot be.
Alexey Proskuryakov
Comment 3
2015-05-20 13:32:16 PDT
Comment on
attachment 253453
[details]
proposed fix I'm sure someone would change this back into an AtomicString within a week from now, and there is no better way to prevent that than a header comment, unfortunately.
WebKit Commit Bot
Comment 4
2015-05-20 14:08:34 PDT
Comment on
attachment 253453
[details]
proposed fix Clearing flags on attachment: 253453 Committed
r184657
: <
http://trac.webkit.org/changeset/184657
>
WebKit Commit Bot
Comment 5
2015-05-20 14:08:38 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug