ThreadableLoaderOptions::isolatedCopy() doesn't produce a copy that is safe for sending to another thread https://bugs.webkit.org/show_bug.cgi?id=145217

Reviewed by Anders Carlsson.

Caught by existing tests, rarely. I don't know how to catch such bugs more reliably.

* loader/ThreadableLoader.cpp: (WebCore::ThreadableLoaderOptions::isolatedCopy):
* loader/ThreadableLoader.h:


Canonical link: https://commits.webkit.org/163232@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@184657 268f45cc-cd09-0410-ab3c-d52691b4dbfc